<resources>
    <string name="app_name">TBI Caretaker</string>

    <string name="validEmail">Please enter a valid email address</string>
    <string name="username">Full Name</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="post">Post</string>
    <string name="sign_up">Sign Up</string>
    <string name="fullname_v">Name can not be empty</string>
    <string name="email_v">Email can not be empty</string>
    <string name="oldpass_v">Old Password can not be match</string>
    <string name="title_v">Title can not be empty</string>
    <string name="password_v">Please enter password</string>
    <string name="cpassword_v">Confirm password can not be empty</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="check_net_connection">Please check internet connection.!</string>
    <string name="password_required">Password must contain 6 characters</string>
    <string name="cpassword_required">Confirm password must contain 6 characters</string>
    <string name="fullname_required">Name must contain 3 characters</string>
    <string name="password_match">Password and confirm password does not match</string>
    <string name="password_change">Old password and new password can not same</string>
    <string name="for_exit">Please click BACK again to exit.</string>
    <string name="logout">User logout successfully</string>
    <string name="under_development">Under Development Mode....</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="forgot_dis">Please enter your email address to retrieve your password.</string>
    <string name="add_sufferer_dis">To connect with your sufferer</string>
    <string name="add_sufferers_dis">You need to enter sufferer email id</string>
    <string name="password_title">Reset My Password</string>
    <string name="change_pass_title">Change Password</string>
    <string name="no_connection">No Connection</string>
    <string name="network_msg">There\'s no network connection. Make sure the your\'re connected to a Wi-fi or mobile network and try again.</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="who_are_you">Who are you?</string>
    <string name="surrerer">Sufferer</string>
    <string name="caretaker">Caretaker</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="full_name">Full Name</string>
    <string name="text_take_photo">Take Photo</string>
    <string name="text_chose_gellery">From Gallery</string>
    <string name="text_add_photo">Add Photo</string>
    <string name="text_cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="reminders">Reminders</string>
    <string name="my_profile">My Profile</string>
    <string name="messages">Messages</string>
    <string name="my_caretaker">My Caretaker</string>
    <string name="notifications">Notifications</string>
    <string name="faq_s">FAQ\'S</string>
    <string name="logout_txt">Logout</string>
    <string name="my_sufferer">My Sufferer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_sufferer">Add Sufferer</string>
    <string name="no_reminder_added">No Reminder Added</string>
    <string name="no_faq_added">No FAQ\'s Added</string>
    <string name="no_notificaiton">No notification</string>
    <string name="reminder">Reminder</string>
    <string name="status">Status</string>
    <string name="not_completed">Not Completed</string>
    <string name="title">Title</string>
    <string name="discription">Description</string>
    <string name="delete_this_reminder">Are you sure you want to delete \nthis reminder ?</string>
    <string name="delete_this_faq">Are you sure you want to delete \nthis FAQ's ?</string>
    <string name="yes">Yes</string>
    <string name="completed_">Completed</string>
    <string name="delete">Delete</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="add_title">Add title</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="date_v">Please select date</string>
    <string name="time_v">Please select time</string>
    <string name="des_v">Description can not be empty</string>
    <string name="health_info">Health Info</string>
    <string name="age">Age in year</string>
    <string name="bloos_group">Bloos group</string>
    <string name="hight">Height in </string>
    <string name="gender">Gender</string>
    <string name="remove_sufferer">Remove Sufferer</string>
    <string name="weight">Weight in kg</string>
    <string name="update">Update</string>
    <string name="old_password">Old Password</string>
    <string name="emergency">Emergency Contact Number</string>
    <string name="na">NA</string>
    <string name="blood_group">Blood group</string>
    <string name="height">Height in cm</string>
    <string name="basic_info">Basic Info</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="characters">characters</string>
    <string name="add">Add</string>
    <string name="email_id">Email Id</string>
    <string name="remove_caretaker">Remove Caretaker</string>
    <string name="completed">Completed</string>
    <string name="done">Done</string>
    <string name="no_reminder_for_this_date">No reminder for this date</string>
    <string name="frequently_asked">Frequently asked questions for your sufferes.</string>
    <string name="add_new">Add new</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="write_a_message">Write a message....</string>
    <string name="no_chat_found">No chat found</string>
    <string name="image">Image</string>
    <string name="upload">Uploading...</string>
    <string name="block">Block</string>
    <string name="block_user">Do you want to block this user</string>
    <string name="unblock_user">Do you want to unblock this user</string>
    <string name="delete_chat">Do you want to delete chat</string>
    <string name="male">Male</string>
    <string name="no_sufferer">Please add sufferer</string>
    <string name="no_caretaker">No caretaker added you</string>
    <string name="enter_text">Please enter text</string>
    <string name="a">A-positive</string>


</resources>
