<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="tbi.org.fragment.caretaker.AddSuffererFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_30sdp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_40sdp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/add_sufferer_dis"
                android:textColor="@color/darkgray"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/add_sufferers_dis"
                android:textColor="@color/darkgray"
                android:textSize="@dimen/_12ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/txt_rounded_corner_bg"
                android:gravity="center|left">

                <EditText
                    android:id="@+id/et_for_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:background="@null"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/email"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/darkgray"
                    android:textColorHint="@color/lightgray"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_for_addSufferer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/btn_rounded_corner_bg"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/add_sufferer"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
