<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_for_rememberHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dailog_bg_top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

        <ImageView
            android:id="@+id/layout_for_crossDailog"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@drawable/circle_for_cross_bg"
            android:src="@drawable/ic_cross" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dailog_bg"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <TextView
            android:id="@+id/tv_for_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/delete_this_reminder"
            android:textColor="@color/darkgray"
            android:textSize="@dimen/_12ssp" />

        <Button
            android:id="@+id/btn_for_yes"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/btn_rounded_corner_bg"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>
</LinearLayout>
