<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_for_rememberHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dailog_bg_top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/reminder"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

        <ImageView
            android:id="@+id/layout_for_crossDailog"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@drawable/circle_for_cross_bg"
            android:src="@drawable/ic_cross" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dailog_bg"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_for_dateDailog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="14 Feb 2018"
                android:textColor="@color/darkgray"
                android:textSize="@dimen/_12ssp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_for_timeDailog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="10:10"
                    android:textColor="@color/darkgray"
                    android:textSize="@dimen/_12ssp" />

                <!-- <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="pm"
                     android:layout_marginLeft="@dimen/_2sdp"
                     android:textColor="@color/darkgray"
                     android:fontFamily="@font/montserrat_regular"
                     android:textSize="@dimen/_12ssp"/>-->

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/status"
            android:textColor="@color/seagreen"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:id="@+id/tv_for_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/not_completed"
            android:textColor="@color/darkgray"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/title"
            android:textColor="@color/seagreen"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:id="@+id/tv_for_titleDailog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="Lunch Time"
            android:textColor="@color/darkgray"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/discription"
            android:textColor="@color/seagreen"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:id="@+id/tv_for_descriptionDailog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="Luslfjldsfjlsdkfjdklsfjdl"
            android:textColor="@color/darkgray"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>
</LinearLayout>
