<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tbi.com.activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/view_for_mobile"
        android:background="@drawable/splash_background">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingBottom="@dimen/_50sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/logo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/txt_rounded_corner_bg"
                    android:gravity="center|left">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/ic_mail" />

                    <EditText
                        android:id="@+id/et_for_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:background="@null"
                        android:fontFamily="@font/montserrat_regular"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColor="@color/darkgray"
                        android:textColorHint="@color/lightgray"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/txt_rounded_corner_bg"
                    android:gravity="center|left">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/ic_locked" />

                    <EditText
                        android:id="@+id/et_for_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:background="@null"
                        android:fontFamily="@font/montserrat_regular"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/darkgray"
                        android:textColorHint="@color/lightgray"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_10sdp">

                    <LinearLayout
                        android:id="@+id/layout_for_remember"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_uncheck"
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:src="@drawable/ic_uncheck" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/iv_uncheck"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/remember_me"
                            android:textColor="@color/black80p"
                            android:textSize="@dimen/_10ssp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_for_forgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/forgot_password"
                        android:textColor="@color/black80p"
                        android:textSize="@dimen/_10ssp" />
                </RelativeLayout>

                <Button
                    android:id="@+id/btn_for_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/btn_rounded_corner_bg"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/layout_for_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_10sdp"

            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_2sdp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

    </RelativeLayout>

    <View
        android:id="@+id/view_for_mobile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:background="@color/seagreen"
        android:visibility="gone" />

</RelativeLayout>
