<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_for_rememberHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dailog_bg_top">

        <TextView
            android:id="@+id/tv_for_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/add_new"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

        <ImageView
            android:id="@+id/layout_for_crossDailog"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@drawable/circle_for_cross_bg"
            android:src="@drawable/ic_cross" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dailog_bg"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <EditText
            android:id="@+id/et_for_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/question"
            android:imeOptions="actionNext"
            android:maxLength="250"
            android:textColor="@color/darkgray"
            android:textColorHint="@color/darkgray"
            android:textSize="@dimen/_12ssp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_for_titleCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="250"
                android:textColor="@color/seagreen"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/characters"
                android:textColor="@color/seagreen"
                android:textSize="@dimen/_10ssp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/lightgray" />

        <EditText
            android:id="@+id/ed_for_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/answer"
            android:imeOptions="actionDone"
            android:maxLength="300"
            android:textColor="@color/darkgray"
            android:textColorHint="@color/darkgray"
            android:textSize="@dimen/_12ssp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_for_desCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="300"
                android:textColor="@color/seagreen"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/characters"
                android:textColor="@color/seagreen"
                android:textSize="@dimen/_10ssp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/lightgray" />

        <Button
            android:id="@+id/btn_for_add"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/btn_rounded_corner_bg"
            android:fontFamily="@font/montserrat_medium"
            android:imeOptions="actionDone"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

</LinearLayout>
