<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    tools:context="tbi.org.activity.UserSelectionActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_50sdp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_40sdp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/who_are_you"
            android:textColor="@color/darkgray"
            android:textSize="@dimen/_12ssp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout_for_sufferer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:src="@drawable/ic_sufferer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/surrerer"
                    android:textColor="@color/black80p"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_for_caretaker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_50sdp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:src="@drawable/ic_caretaker" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/caretaker"
                    android:textColor="@color/black80p"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
